local changes before sync

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                         <li>テキストテキストテキストテキスト</li>
                         <li>テキストテキストテキストテキスト</li>
                     </ol>
-
                 </div>
+            </div>
 
+            <div class="btn">
+                <a href="#">レシピを見る</a>
             </div>
         </main>
         <footer></footer>
