--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                 <a href="#">レシピを見る</a>
             </div>
         </main>
-        <footer></footer>
+        <footer id="footer">
+            <ul class="sns">
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ul>
+            <p>&copy; 2021 Recipe Diary</p>
+        </footer>
     </body>
 </html>
